--- a/_config.yml
+++ b/_config.yml
@@ -25,11 +25,13 @@ defaults:
       type: "posts" # previously `post` in Jekyll 2.2.
     values:
       layout: "post"
+      icon: "circle-o"
   - scope:
       path: "" # an empty string here means all files in the project
       type: "pages" # previously `post` in Jekyll 2.2.
     values:
       layout: "page"
+      icon: "circle-o"
 
 # Build settings
 gems:
@@ -50,8 +52,8 @@ jekyll-archives:
     - tags
   layout: 'archive'
   permalinks:
-    category: '/category/:name/'
-    tag: '/tag/:name/'
+    category: '/kategorie/:name/'
+    tag: '/stitek/:name/'
 
 prose:
   rooturl: '_posts'
@@ -68,6 +70,21 @@ prose:
     - /_scss
   metadata:
     _posts:
+      - name: "category"
+        field:
+          element: "select"
+          label: "Kategorie"
+          placeholder: "Vybrat kategorii"
+          alterable: false
+          options:
+            - name: "Závady"
+              value: "zavady"
+            - name: "Informace"
+              value: "informace"
+            - name: "Pozvánky"
+              value: "pozvanky"
+            - name: "Dokumenty"
+              value: "dokumenty"
       - name: "tags"
         field:
           element: "multiselect"
@@ -75,10 +92,15 @@ prose:
           placeholder: "Vybrat nálepky"
           alterable: true
           options:
-            - name: "Závada"
-              value: "zavada"
-            - name: "Informace"
-              value: "informace"
-            - name: "Pozvánka"
-              value: "pozvanka"
+            - name: "Důležité"
+              value: "dulezite"
+      - name: "icon"
+        field:
+          element: "select"
+          label: "Ikona"
+          placeholder: "Vybrat ikonu"
+          alterable: true
+          options:
+            - name: "Kniha"
+              value: "fa-book"
 
