Oprava standardní ikony pro příspěvky

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ defaults:
       type: "posts" # previously `post` in Jekyll 2.2.
     values:
       layout: "post"
-      icon: "circle-o"
+      icon: "fa-circle-o"
   - scope:
       path: "" # an empty string here means all files in the project
       type: "pages" # previously `post` in Jekyll 2.2.
